# SnD-Revenue-Service

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.local.example.yaml
src/snd_revenue_service/: __main__.py  bot.py  config.py  embeds.py  events.py  join_profile.py  join_risk.py  publisher.py
tests/: test_bootstrap.py  test_bot.py  test_config.py  test_embeds.py  test_events.py  test_join_profile.py  test_join_risk.py  test_packaging.py
