[project]
name = "snd-revenue-service"
version = "0.1.0"
description = "The Stand and Deliver Revenue Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "discord.py>=2.7,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
